# pegasus

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  editor.html  index.html  pegasus.wasm  rapier-test.wasm  version.json  whats-new.json
.claude/: launch.json
android/: README.md  settings.gradle.kts  sync-web.sh
app/: pegasus.apk
docs/: control-tuning.md
ios/: README.md  sync-web.sh  testflight-distribute.py
levels/: caves.level  flux.level  hollows.level  manifest.json
pr-100/: index.html  version.json  whats-new.json
pr-101/: index.html  pegasus.wasm  version.json  whats-new.json
pr-102/: index.html  version.json  whats-new.json
pr-104/: index.html  pegasus.wasm  version.json
pr-105/: index.html  version.json  whats-new.json
pr-106/: index.html  pegasus.wasm  version.json  whats-new.json
pr-107/: index.html  pegasus.wasm  version.json  whats-new.json
pr-108/: index.html  version.json  whats-new.json
pr-109/: index.html  version.json  whats-new.json
pr-110/: editor.html  index.html  version.json  whats-new.json
pr-111/: index.html  version.json  whats-new.json
pr-112/: index.html  version.json
pr-116/: editor.html  index.html  version.json
pr-117/: editor.html  index.html  pegasus.wasm  version.json
pr-118/: index.html  version.json
pr-119/: config.json  index.html  version.json  whats-new.json
pr-120/: index.html  pegasus.wasm  version.json
pr-123/: index.html  version.json  whats-new.json
pr-124/: index.html  pegasus.wasm  version.json  whats-new.json
pr-127/: index.html  privacy.html  version.json  whats-new.json
pr-128/: index.html  pegasus.wasm  version.json
pr-129/: index.html  pegasus.wasm  version.json
pr-52/: index.html  rapier-test.wasm  version.json
pr-53/: index.html  rapier-test.wasm
pr-54/: index.html  rapier-test.wasm  version.json
pr-55/: index.html  rapier-test.wasm  version.json
pr-58/: index.html  rapier-test.wasm  version.json
pr-59/: index.html  rapier-test.wasm  version.json
pr-60/: index.html  rapier-test.wasm  version.json
pr-61/: index.html  rapier-test.wasm  version.json
pr-62/: index.html  rapier-test.wasm  version.json
pr-63/: index.html  version.json
pr-64/: index.html  version.json
pr-65/: index.html  pegasus.wasm  version.json
pr-66/: index.html  pegasus.wasm  version.json
pr-69/: index.html  pegasus.wasm  version.json
pr-70/: index.html  pegasus.wasm  version.json
pr-71/: index.html  pegasus.wasm  version.json
pr-78/: index.html  pegasus.wasm  version.json
pr-79/: index.html  pegasus.wasm  version.json
sim-core/: Cargo.toml
sim-core/src/: lib.rs  replay.rs  sim.rs  world.rs
(+107 files in other folders)
