[package]
name = "pegasus"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
rapier2d = { version = "0.23", features = ["default"] }
macroquad = "0.4"
# Deflate for the shareable replay blob (pure Rust, wasm-friendly).
miniz_oxide = "0.8"

# Real audio only on the web build: the audio feature pulls quad-snd, which
# needs ALSA headers to link native Linux builds. Native dev builds use
# macroquad's dummy audio backend (same API, no sound) so `cargo build` /
# `cargo test` work without system deps.
[target.'cfg(target_arch = "wasm32")'.dependencies]
macroquad = { version = "0.4", features = ["audio"] }

# Tuned for wasm size (the deploy artifact). Native release builds are rare
# here; if you need a fast native build use the dev profile.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
