[package]
name = "pegasus"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace]
members = ["sim-core"]

[dependencies]
# The deterministic core (sim/world/replay + the replay blob codec) lives in
# its own macroquad-free crate so the score backend can compile the exact
# same simulation for server-side verification.
pegasus-sim = { path = "sim-core" }
macroquad = "0.4"

# Real audio only on the web build: the audio feature pulls quad-snd, which
# needs ALSA headers to link native Linux builds. Native dev builds use
# macroquad's dummy audio backend (same API, no sound) so `cargo build` /
# `cargo test` work without system deps.
[target.'cfg(target_arch = "wasm32")'.dependencies]
macroquad = { version = "0.4", features = ["audio"] }

# Tuned for wasm size (the deploy artifact). Native release builds are rare
# here; if you need a fast native build use the dev profile.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
